--- a/ToDo-SwiftUI/ToDo-SwiftUI.entitlements
+++ b/ToDo-SwiftUI/ToDo-SwiftUI.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.kim.widgtTodo</string>
+		<string>group.com.kim.widgetTodo</string>
 	</array>
 </dict>
 </plist>
